[package]
name = "bevy-game-jam"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.4"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
bevy = "0.13.2"

# dependency optimizations
[profile.dev.package."*"]
opt-level = 0

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[target.wasm32.unknown.unknown]
runner = "wasm-server-runner"